Fix icon alignment on apps page (#2)

--- a/styles/apps.css
+++ b/styles/apps.css
@@ -10,7 +10,7 @@ html, body {
     display:flex;
     justify-content:center;
     align-items:center;
-    margin-top:1vw;
+    margin-top:2vw;
     margin-left:2vw;
     margin-right:2vw;
 }
@@ -56,18 +56,19 @@ h1 {
     flex-wrap:wrap;
     width:fit-content;
     justify-content:center;
+    text-align:center;
     color:white;
     margin:auto;
-    margin-top:100px;
+    margin-top:25px;
 }
 
 #appsContainer a {
-    display: inline-block;
+    display:inline-block;
     color:whitesmoke;
-    margin:30px;
+    margin: 20px;
     text-decoration:none;
-    border-radius:25px;
 }
+
 #appsContainer h2 {
     width:fit-content;
     font-weight:bold;
@@ -83,7 +84,7 @@ h1 {
 
 #appsContainer img {
     display:block;
-    padding:10px;
+    padding:25px;
     border-radius:25px;
     width:200px;
     height:200px;
